@@ -206,7 +206,7 @@ class Component extends _Component {
         $Product = $this->getProduct();
         $tracingModeArray = Product::getTracingModeConstArray();
         $method = $this->getLevel() ? 'toString' : 'getName';
-        $info = $Product->getBaseReference() . ' | ' . $Product->$method();
+        $info = trim($Product->getBaseReference() . ' | ' . $Product->$method());
         $info .= ($Product->getTracingMode() == 0)?' ':
                 ' (' . $tracingModeArray[$Product->getTracingMode()] . ') ';
         $info .= ($this->getLevel() == 0)?
@@ -247,7 +247,7 @@ class Component extends _Component {
         $headCP = Object::load('ConcreteProduct', $headId);
         $tracingModeArray = Product::getTracingModeConstArray();
         $method = $this->getLevel() ? 'toString' : 'getName';
-        $info = $Product->getBaseReference() . ' | ' . $Product->$method();
+        $info = trim($Product->getBaseReference() . ' | ' . $Product->$method());
         $info .= ($Product->getTracingMode() == 0)?' ':
                 ' (' . $tracingModeArray[$Product->getTracingMode()] . ') ';
         $info .= ($this->getLevel() == 0)?
